--- a/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/Details.cshtml
@@ -131,7 +131,7 @@
                             <div class="col-md-6 col-sm-6 ">
                                 <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados.ConcatNombre)" readonly />
                             </div>
-                        </div>                      
+                        </div>
                         <div class="item form-group">
                             @Html.LabelFor(model => model.id_responsable_principal, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                             <div class="col-md-6 col-sm-6 ">
@@ -176,12 +176,19 @@
                                     <button type="button" onclick="MuestraDetalles(@Convert.ToInt32(item.EsInventario()), @generic.id)" class="btn btn-primary btn-sm" style="@(generic.id>0?"display:block":"display:none")" title="Ver Detalles"> <i class="fa-solid fa-eye"></i></button>
                                 </div>
                             </div>
+                           
+                            <div class="item form-group">
+                                <label class="col-form-label col-md-1 col-sm-1 label-align">Conmentario</label>
+                                <div class="col-md-9">
+                                    @Html.TextAreaFor(model => item.comments, new { @class = "form-control", @rows = "2", @autocomplete = "off", @readonly = "readonly" })
+                                    @Html.ValidationMessageFor(model => item.comments, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
                         }
                         <div class="ln_solid"></div>
                         <div class="form-group row">
                             <span style="color:black"><b>RESPONSIVA</b></span>
                         </div>
-
 
                         @if (Model != null && Model.id_biblioteca_digital > 0)
                         {
