2022-09-01 Se agrega pantalla para editar comentarios de asignaciones IT.

--- a/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/Details.cshtml
@@ -178,7 +178,7 @@
                             </div>
                            
                             <div class="item form-group">
-                                <label class="col-form-label col-md-1 col-sm-1 label-align">Conmentario</label>
+                                <label class="col-form-label col-md-1 col-sm-1 label-align">Comentario</label>
                                 <div class="col-md-9">
                                     @Html.TextAreaFor(model => item.comments, new { @class = "form-control", @rows = "2", @autocomplete = "off", @readonly = "readonly" })
                                     @Html.ValidationMessageFor(model => item.comments, "", new { @class = "text-danger" })
